# jode

jode/: .project  AUTHORS  ChangeLog  CombineCatchLocal.java  CreateConstantArray.java  CreateDoWhileStatements.java  CreateNewConstructor.java  CreateTryCatchStatements.java  CreateWhileStatements.java  FlowTransformation.java  INSTALL  JodeAppletOneZero.java  Makefile.am  NEWS  README  RemoveNop.java  TODO  acinclude.m4  addHeader.pl  build.xml  ci.all  config.props  configure.in  javaDependencies.pl.in  javacWithDeps.sh.in  jcpp  jode-applet.html  jode-obfuscator.html  jode.html  makesnapshot  maketar  makezips
jode/doc/: Makefile.am  applet.html  applet.html.in  applet.htp  applet.php  bluesky.html  bluesky.php  download.html  download.html.in  download.php  faq.php  footer.inc  header.inc  history.html  index.htp  index.php  jode-applet.html  jode-unix.html  jode-useapplet.html  jode-win.html  jode.html  jode.htt  license.html  license.php  links.html  links.php  menu.inc  myproject.jos  technical.texi  usage.html  usage.php
jode/doc/gimp/: jode-logo.xcf
jode/jode/: AssertError.java  Decompiler.java  GlobalOptions.java  GlobalOptions.java.in  JodeApplet.java  JodeWindow.java  Makefile.am
jode/jode/bytecode/: AttributeInfo.java  BasicBlockReader.java  BasicBlockWriter.java  BasicBlocks.java  BinaryInfo.java  BinaryInfo.java.in  Block.java  BytecodeInfo.java  BytecodeInfo.java.in  ClassInfo.java  ClassInfo.java.in  CodeInfo.java  ConstantPool.java  FieldInfo.java  GrowableConstantPool.java  Handler.java  IncInstruction.java  InnerClassInfo.java  Instruction.java  LocalVariableInfo.java  Makefile.am  MethodInfo.java  Opcodes.java  Reference.java  ReferenceInstruction.java  SearchPath.java  SlotInstruction.java  SwitchInstruction.java  TypeDimensionInstruction.java  TypeInstruction.java  TypeSignature.java  package.html  prj.el
jode/jode/decompiler/: Analyzer.java  Applet.java  ClassAnalyzer.java  ClassAnalyzer.java.in  CodeAnalyzer.java  DeadCodeAnalysis.java  Declarable.java  Decompiler.java  FieldAnalyzer.java  FieldAnalyzer.java.in  ImportHandler.java  ImportHandler.java.in  LocalInfo.java  LocalVarEntry.java  LocalVariable.java  LocalVariableAnalyzer.java  LocalVariableHash.java  LocalVariableRangeList.java  LocalVariableTable.java  Main.java  Makefile.am  MethodAnalyzer.java  MethodAnalyzer.java.in  Opcodes.java  Options.java  OuterValueListener.java  OuterValues.java  ProgressListener.java  Scope.java  TabbedPrintWriter.java  Window.java
jode/jode/expr/: ArrayLengthOperator.java  ArrayLoadOperator.java  ArrayStoreOperator.java  AssignOperator.java  BinaryOperator.java  BreakInstructionHeader.java  CaseInstructionHeader.java  CatchInstructionHeader.java  CheckCastOperator.java  CheckNullOperator.java  CheckNullOperator.java.in  ClassFieldOperator.java  CombineIfGotoExpressions.java  CompareBinaryOperator.java  CompareToIntOperator.java  CompareUnaryOperator.java  ComplexExpression.java  ConstOperator.java  ConstantArrayOperator.java  ConstructorOperator.java  ConvertOperator.java  CreateAssignExpression.java  CreateExpression.java  CreateIfThenElseOperator.java  DoWhileInstructionHeader.java  EmptyStringOperator.java  Expression.java  Expression.java.in  FieldOperator.java  FieldOperator.java.in  GetFieldOperator.java  IIncOperator.java  IfInstructionHeader.java  IfThenElseOperator.java  InstanceOfOperator.java  Instruction.java  InstructionHeader.java  InvokeOperator.java  InvokeOperator.java.in  JsrInstructionHeader.java  (+39 more)
jode/jode/flow/: BreakBlock.java  BreakableBlock.java  CaseBlock.java  CatchBlock.java  CatchBlock.java.in  CatchFinallyBlock.java  CombineIfGotoExpressions.java  CompleteSynchronized.java  ConditionalBlock.java  ContinueBlock.java  CreateAssignExpression.java  CreateCheckNull.java  CreateClassField.java  CreateConstantArray.java  CreateExpression.java  CreateForInitializer.java  CreateIfThenElseOperator.java  CreateNewConstructor.java  CreatePrePostIncExpression.java  EmptyBlock.java  FinallyBlock.java  FlowBlock.java  FlowBlock.java.in  IfThenElseBlock.java  IfThenElseBlock.java.in  InstructionBlock.java  InstructionBlock.java.in  InstructionContainer.java  InstructionContainer.java.in  JsrBlock.java  Jump.java  LoopBlock.java  Makefile.am  MarkInlineExpression.java  RawTryCatchBlock.java  RemoveEmpty.java  RetBlock.java  ReturnBlock.java  SequentialBlock.java  SimplifyExpression.java  (+17 more)
jode/jode/jvm/: CodeVerifier.java  CodeVerifier.java.in  Interpreter.j  Interpreter.java  Interpreter.java.in  Makefile.am  NewObject.java  ReturnAddress.java  RuntimeEnvironment.java  SimpleRuntimeEnvironment.java  SyntheticAnalyzer.java  SyntheticAnalyzer.java.in  Value.java
jode/jode/obfuscator/: ClassBundle.java  ClassBundle.java.in  ClassIdentifier.java  ClassIdentifier.java.in  CodeAnalyzer.java  CodeTransformer.java  ConstantAnalyzer.java  ConstantAnalyzer.java.in  ConstantRuntimeEnvironment.java  ConstantRuntimeEnvironment.java.in  FieldIdentifier.java  (+29 more)
jode/scripts/: addHeader.pl  javaDependencies.pl
jode/src/: foo
jode/test/: AnonymousClass.java  AnonymousJavac.java  ArrayCloneTest.java  ArrayTest.java  AssignOp.java  Base.j  Child.j  ClassOpTest.java  Conflicts.java  ConstantTypes.java  EvilTypes.j  Expressions.java  Flow.java  For.java  HintTypeTest.java  IfCombine.java  InlineTest.java  InnerClass.java  InnerCompat.java  LocalTypes.java  MethodScopedClass.java  NestedAnon.java  ObfuscateStrings.j  OptimizeTest.java  OptimizerTest.java  StackOps.j  Test.java  TriadicExpr.java  TryCatch.java  Unreach.java  simpletests.sh
trunk/jode/: .classpath  Block.java  ChangeLog  CombineCatchLocal.java  CreateBreakStatement.java  CreateIfStatements.java  CreateSwitchStatements.java  CreateTryCatchStatements.java  CreateWhileStatements.java  INSTALL  JodeAppletOneZero.java  Makefile.am  NEWS  README  TODO  Transformation.java  acinclude.m4  addHeader.pl  build.xml  ci.all  configure.in  javaDependencies.pl.in  jcpp  jode-applet.html  jode-unix.html  jode-useapplet.html  jode-win.html  makesnapshot  maketar  prj.el  sun.tools.java.err  sun.tools.java.src
(+785 files in other folders)
